// Vitest Snapshot v1

exports[`button > should work with \`size\` prop 1`] = `
"<a class=\\"eu-button eu-button--default bg-default text-black eu-button--xs\\">
  <!---->
  <!----><span>xs</span>
</a>"
`;

exports[`button > should work with \`size\` prop 2`] = `
"<a class=\\"eu-button eu-button--default bg-default text-black eu-button--sm\\">
  <!---->
  <!----><span>sm</span>
</a>"
`;

exports[`button > should work with \`size\` prop 3`] = `
"<a class=\\"eu-button eu-button--default bg-default text-black eu-button--md\\">
  <!---->
  <!----><span>md</span>
</a>"
`;

exports[`button > should work with \`size\` prop 4`] = `
"<a class=\\"eu-button eu-button--default bg-default text-black eu-button--lg\\">
  <!---->
  <!----><span>lg</span>
</a>"
`;

exports[`button > should work with \`size\` prop 5`] = `
"<a class=\\"eu-button eu-button--default bg-default text-black eu-button--xl\\">
  <!---->
  <!----><span>xl</span>
</a>"
`;

exports[`button > should work with \`type\` prop 1`] = `
"<a class=\\"eu-button eu-button--default bg-default text-black eu-button--md\\">
  <!---->
  <!----><span>default</span>
</a>"
`;

exports[`button > should work with \`type\` prop 2`] = `
"<a class=\\"eu-button eu-button--text bg-text text-white eu-button--md\\">
  <!---->
  <!----><span>text</span>
</a>"
`;

exports[`button > should work with \`type\` prop 3`] = `
"<a class=\\"eu-button eu-button--primary bg-primary text-white eu-button--md\\">
  <!---->
  <!----><span>primary</span>
</a>"
`;

exports[`button > should work with \`type\` prop 4`] = `
"<a class=\\"eu-button eu-button--info bg-info text-white eu-button--md\\">
  <!---->
  <!----><span>info</span>
</a>"
`;

exports[`button > should work with \`type\` prop 5`] = `
"<a class=\\"eu-button eu-button--success bg-success text-white eu-button--md\\">
  <!---->
  <!----><span>success</span>
</a>"
`;

exports[`button > should work with \`type\` prop 6`] = `
"<a class=\\"eu-button eu-button--warning bg-warning text-white eu-button--md\\">
  <!---->
  <!----><span>warning</span>
</a>"
`;

exports[`button > should work with \`type\` prop 7`] = `
"<a class=\\"eu-button eu-button--error bg-error text-white eu-button--md\\">
  <!---->
  <!----><span>error</span>
</a>"
`;

exports[`button > should work with \`type\` prop 8`] = `
"<a class=\\"eu-button eu-button--purple bg-purple text-white eu-button--md\\">
  <!---->
  <!----><span>purple</span>
</a>"
`;
